import java.util.Map;

public class Intersection {
    String id;
    Map<Direction, TrafficSignal> signalMap;
}
