public class Phase {
    Direction direction;
    SignalTiming signalTiming;

    public Phase(Direction direction, SignalTiming signalTiming) {
        this.direction = direction;
        this.signalTiming = signalTiming;
    }
}
