public enum SignalColor {
    RED,
    GREEN,
    YELLOW,
}
