public class SignalTiming {
    int greenSec;
    int yellowSec;

    public SignalTiming(int greenSec, int yellowSec) {
        this.greenSec = greenSec;
        this.yellowSec = yellowSec;
    }
}
