public enum TrafficMode {
    NORMAL,
    PEAK
}
