public class TrafficSignal {
    String id;
    Direction direction;
    SignalColor signalColor;


}
